--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.lordicon.com/libs/frhvbuzj/lord-icon-2.0.2.js"></script>
 
     <link rel="icon" href="favicon.ico">
-    <title>Personal Web</title>
+    <title>Vijay Mali | Developer</title>
 </head>
 
 <body>
