--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 
         <hr>
-        <h2>My Skills</h2>
+        <h2>Skills</h2>
         <div class="skillno1">
 
             <h3>Design & Development</h3>
